Updated Resume - Added Self Employed Points - Updated Tenses

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -9,50 +9,64 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Senior Research Analyst} % Job title
-    {Treasury Board Secretariat, Ontario Public Service} % Organization
-    {Toronto, Canada} % Location
-    {2019 - Present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Led the division's data overhaul project to modernize and enhance digital data infrastructure, including migration to Azure cloud using Python and Pandas for improved efficiency and AI readiness.}
-        \item{Managed software procurement and guided divisional roadmaps for future digital service expansion, resulting in significant cost savings of over \$100k.}
-        \item{Oversaw co-op student hiring and managed their projects and tasks relating to automation, AI research, and infrastructure upgrades, contributing to the team's growth and development.}
-        \item{Coordinated project planning and scheduling, designed software architecture, and collaborated with cross-functional teams to define technical requirements and specifications for software development.}
-        \item{Conducted regular code reviews and provided guidance on software design principles and coding standards, promoting consistency and quality across the team's codebase.}
-      \end{cvitems}
-    }
+% \cventry
+%   {Owner/Operator}
+%   {TWDickson Consulting}
+%   {Toronto, Canada}
+%   {October 20, 2021 - Present}
+%   {
+%     \begin{cvitems}
+%       \item Providing web development, automation, and data engineering expertise.
+%       \item Designing and coding a static site generator for \textbf{Topology Health} (https://topology.health).
+%       \item Working closely with clients to produce a uniform and harmonized information architecture.
+%       \item Creating documentation for knowledge transfer, facilitating easy client site maintenance.
+%       \item Implementing robust content management systems for seamless website updates.
+%       \item Successfully managing client relationships through various remote communication platforms.
+%     \end{cvitems}
+%   }
 
-%---------------------------------------------------------
-  \cventry
-    {Workforce Analyst} % Job title
-    {Ministry of Government \& Consumer Services, Ontario Public Service} % Organization
-    {Toronto, Canada} % Location
-    {2017 - 2019} % Date(s)
-    {
-      \begin{cvitems}
-        \item {Leveraged expertise in data management, reporting, visualization, and process automation using tools such as SQL, MS Access, Excel, VBA, and Python to support business operations.}
-        \item {Automated the generation and distribution of over 7000 customized documents, reducing manual labor by a month and enabling directors to quickly view their reporting staff information through customized summary documents.}
-        \item {Developed new reports that compared content across multiple Word documents, optimizing reports to run more efficiently with less manual work and improving data accuracy.}
-        \item {Maintained and improved data integrity across multiple systems, performing regular data quality checks and recommending improvements to data management processes.}
-        \item {Collaborated with cross-functional teams to analyze workforce trends, identify areas of improvement, and develop an equitable job classification system}
-      \end{cvitems}
-    }
+\cventry
+  {Senior Research Analyst}
+  {Ontario Public Service - Treasury Board Secretariat}
+  {Toronto, Canada}
+  {2019 - Present}
+  {
+    \begin{cvitems}
+      \item Leading the division's data overhaul project to modernize and enhance digital data infrastructure, including migration to Azure cloud using Python and Pandas for improved efficiency and AI readiness.
+      \item Managing software procurement and guiding divisional roadmaps for future digital service expansion, resulting in significant cost savings of over \$100k.
+      \item Overseeing co-op student hiring, onboarding, and assigning projects and tasks relating to automation, AI research, and infrastructure upgrades, contributing to the team's growth and development.
+      \item Coordinating project planning and scheduling; designing software architecture and collaborating with cross-functional teams to define technical requirements and specifications for software development.
+      \item Conducting regular code reviews and providing guidance on software design principles and coding standards, promoting consistency and quality across the team's codebase.
+    \end{cvitems}
+  }
 
-%---------------------------------------------------------
-  \cventry
-    {Junior System Administrator} % Job title
-    {Soho VFX} % Organization
-    {Toronto, Canada} % Location
-    {2016 - 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Completed a render farm upgrade by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times.}
-        \item{Provided technical support to employees by automating repetitive tasks, upgrading software, and optimizing systems, resulting in an ongoing savings of one hour per week.}
-        \item{Recognized for contributions as a Systems Administrator in Logan (2017).}
-        \item{Conducted routine maintenance and troubleshooting of hardware and software, ensuring the smooth operation of systems and minimizing downtime.}
-      \end{cvitems}
-    }
+\cventry
+  {Workforce Analyst}
+  {Ontario Public Service - Ministry of Government \& Consumer Services}
+  {Toronto, Canada}
+  {2017 - 2019}
+  {
+    \begin{cvitems}
+      \item Leveraged expertise in data management, reporting, visualization, and process automation using tools such as SQL, MS Access, Excel, VBA, and Python to support business operations.
+      \item Automated the generation and distribution of over 7000 customized documents, reducing manual labour by a month and enabling directors to quickly view their reporting staff information through customized summary documents.
+      \item Developed new reports that compare content across multiple Word documents, optimizing reports to run more efficiently with less manual work and improving data accuracy.
+      \item Maintained and improving data integrity across multiple systems, performing regular data quality checks and recommending improvements to data management processes.
+      \item Collaborated with cross-functional teams to analyze workforce trends, identify areas of improvement, and develop an equitable job classification system.
+    \end{cvitems}
+  }
+
+\cventry
+  {Junior System Administrator}
+  {Soho VFX}
+  {Toronto, Canada}
+  {2016 - 2017}
+  {
+    \begin{cvitems}
+      \item Completed a render farm upgrade by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times.
+      \item Provided technical support to employees by automating repetitive tasks, upgrading software, and optimizing systems, resulting in an ongoing savings of one hour per week.
+      \item Recognized for contributions as a Systems Administrator in Logan (2017).
+      \item Conducted routine maintenance and troubleshooting of hardware and software, ensuring the smooth operation of systems and minimizing downtime.
+    \end{cvitems}
+  }
+
 \end{cventries}
