--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -52,7 +52,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[circle,noedge,left]{./examples/profile}
 \name{Taylor}{Dickson}
-\position{Senior Research Analyst{\enskip\cdotp\enskip}Data Engineer}
+\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}
 \address{Toronto, Canada}
 
 \mobile{1-647-518-2894}
@@ -82,14 +82,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Matthew Woods}
-  {Canadian Medical Association Talent Acquisition}
+  {Recruitment Team}
+  {CyberCoders}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Senior Data Integration Specialist}
+\lettertitle{Job Application for Data Engineer }
 % How the letter is opened
-\letteropening{Dear Matthew,}
+\letteropening{Dear Sally Janavicius}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -117,13 +117,11 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am writing to express my keen interest in the Data Integration Specialist position at the Canadian Medical Association. As a seasoned data integration specialist with extensive Microsoft Azure ecosystem experience, I am confident that my skills and expertise align perfectly with the requirements of the role.
+I am writing to apply for the position of Senior Software Engineer with CyberCoders. With over 7 years of experience in Python development, Linux, Docker, physical and cloud infrastructure Azure, and networking protocols, I am well-equipped to contribute to your team's efforts in building enterprise-grade applications for network performance monitoring.
 
-With a track record of overseeing the linkage of cross-functional databases and working with modern Data Lakes and Big Data systems in the Azure cloud, I possess the technical proficiency and hands-on experience necessary to excel in this role. My fluency in SQL, Python, and Go as well as well development languages such as JavaScript, HTML, CSS, and Vue enables me to tackle diverse data integration challenges. I am highly collaborative, known for my constructive mindset in working with analysts, data stewards, and developers. Furthermore, I am a dedicated advocate for continuous process improvement and efficiency.
+Throughout my career, I have demonstrated a strong ability to design and develop solutions using open-source technologies including Python, targeting a variety of environments, either virtualized with Docker, in the Cloud on Azure, or on linux systems. I have a solid understanding of networking protocols with my time as a system administrator. With my collaborative mindset and effective communication skills, I am confident in my ability to work alongside Product Management and cross-functional teams to drive success.
 
-I am thrilled by the opportunity to join your passionate development team and contribute to an organization that embraces change and offers professional development opportunities. With my strategic thinking, planning abilities, and strong technical skills, I am confident in my ability to make a significant impact on your data integration processes.
-
-Thank you for considering my application. I would welcome the opportunity to discuss in more detail how my qualifications align with your organization's needs.
+I am excited about the opportunity to join CyberCoders and contribute to its growth and my own. With my technical expertise, dedication to excellence, and passion for solving complex problems, I am confident that I can make a significant impact as a Senior Software Engineer. Thank you for considering my application.
 \end{cvletter}
 
 
