--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -26,14 +26,15 @@
 %   }
 
 \cventry
-  {Senior Research Analyst}
+  {Senior Research Analyst/Team Lead}
   {Ontario Public Service - Treasury Board Secretariat}
   {Toronto, Canada}
   {2019 - Present}
   {
     \begin{cvitems}
       \item Leading the division's data overhaul project to modernize and enhance digital data infrastructure, including migration to Azure cloud using Python and Pandas for improved efficiency and AI readiness.
-      \item Managing software procurement and guiding divisional roadmaps for future digital service expansion, resulting in significant cost savings of over \$100k.
+      \item Managed a team of 5, held regular team meetings, assigned tasks and duties, followed up with team members, and coordinated with senior management. 
+      \item  Assisted with software procurement and guiding divisional roadmaps for future digital service expansion, resulting in significant cost savings of over \$100k.
       \item Overseeing co-op student hiring, onboarding, and assigning projects and tasks relating to automation, AI research, and infrastructure upgrades, contributing to the team's growth and development.
       \item Coordinating project planning and scheduling; designing software architecture and collaborating with cross-functional teams to define technical requirements and specifications for software development.
       \item Conducting regular code reviews and providing guidance on software design principles and coding standards, promoting consistency and quality across the team's codebase.
