--- a/Taylor Dickson Resume.tex
+++ b/Taylor Dickson Resume.tex
@@ -52,7 +52,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Taylor}{Dickson}
-\position{Senior Research Analyst{\enskip\cdotp\enskip}Data Engineer}
+\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}
 \address{Toronto, Canada}
 
 \mobile{1-647-518-2894}
