--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -38,6 +38,7 @@
       \item Overseeing co-op student hiring, onboarding, and assigning projects and tasks relating to automation, AI research, and infrastructure upgrades, contributing to the team's growth and development.
       \item Coordinating project planning and scheduling; designing software architecture and collaborating with cross-functional teams to define technical requirements and specifications for software development.
       \item Conducting regular code reviews and providing guidance on software design principles and coding standards, promoting consistency and quality across the team's codebase.
+      \item Created internal data cleaning tools utilizing, restful api design, flask/django/node, vue connecting to an azure database. 
     \end{cvitems}
   }
 
