--- a/cv/education.tex
+++ b/cv/education.tex
@@ -12,12 +12,12 @@
 %---------------------------------------------------------
   \cventry
     {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
+    {University of Toronto)} % Institution
+    {Toronto, Canada} % Location
     {Mar. 2010 - Aug. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        %\item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
       \end{cvitems}
     }
 
