Updated + Condensed Skills

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -8,27 +8,22 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvskills}
-
-%---------------------------------------------------------
-  \cvskill
-    {DevOps} % Category
-    {Docker, Docker-Compose, Shell Scripting, Mac and Linux Administration} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Go Lang, Express, Django, REST API} % Skills
-
 %---------------------------------------------------------
   \cvskill
     {Front-end} % Category
     {Javascript, Vue, SASS, HTML, CSS} % Skills
-
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Python, Node.js} % Skills
-
+    {Back-end} % Category
+    {Python, Django, Flask, Go Lang, Node, Express, REST API} % Skills
+%---------------------------------------------------------
+  \cvskill
+    {DevOps} % Category
+    {Docker, Docker-Compose, Shell Scripting (BASH), Networking (HTTP, TCP/IP, DNS), Mac and Linux Administration} % Skills
+%---------------------------------------------------------
+%  \cvskill
+%    {Programming} % Category
+%    {Python, Node} % Skills
 %---------------------------------------------------------
   \cvskill
     {Soft} % Category
