Updated for Split Versions

--- a/Taylor Dickson Resume - Full Stack.tex
+++ b/Taylor Dickson Resume - Full Stack.tex
@@ -21,7 +21,7 @@
 \documentclass[11pt, letterpaper]{awesome-cv}
 
 % Define the version here
-\newcommand{\oversion}{} % Change to "data-engineer", "dev-ops", "full-stack"
+\newcommand{\oversion}{full-stack} % Change to "data-engineer", "dev-ops", "full-stack"
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.6cm, footskip=.5cm}
