--- a/Taylor Dickson Resume - Dev Ops.tex
+++ b/Taylor Dickson Resume - Dev Ops.tex
@@ -21,7 +21,7 @@
 \documentclass[11pt, letterpaper]{awesome-cv}
 
 % Define the version here
-\newcommand{\oversion}{} % Change to "data-engineer", "dev-ops", "full-stack"
+\newcommand{\oversion}{dev-ops} % Change to "data-engineer", "dev-ops", "full-stack"
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.6cm, footskip=.5cm}
@@ -121,7 +121,8 @@
 \ifdefstring{\oversion}{dev-ops}{%
 	\input{cv/summary.tex}
 	\input{cv/skills.tex}
-	\input{cv/experience-dev-ops.tex}}{%
+	\input{cv/experience-dev-ops.tex}
+}{%
 \ifdefstring{\oversion}{full-stack}{%
 	\input{cv/summary.tex}
 	\input{cv/skills.tex}
