--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -52,10 +52,10 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 %\photo[circle,noedge,left]{./examples/profile}
 \name{Taylor}{Dickson}
-\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}
+\position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
 \address{Toronto, Canada}
 
-\mobile{1-647-518-2894}
+\mobile{1--647--518--2894}
 \email{mail@twdickson.com}
 %\dateofbirth{January 1st, 1970}
 \homepage{twdickson.com}
@@ -81,19 +81,19 @@
 %	All of the below lines must be filled out
 %-------------------------------------------------------------------------------
 % The company being applied to
-\recipient
-  {Recruitment Team}
-  {CyberCoders}
+\recipient%
+  {Corporate and Financial Services}
+  {City of Richmond Hill}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Data Engineer }
+\lettertitle{Job Application for Supervisor Application Services}
 % How the letter is opened
-\letteropening{Dear Sally Janavicius}
+\letteropening{Dear Hiring Manager,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
+\letterenclosure[Attached]{Resume}
 
 
 %-------------------------------------------------------------------------------
@@ -105,28 +105,49 @@
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
-\makecvfooter
+\makecvfooter%
   {\today}
-  {Taylor Dickson ~~~·~~~Cover Letter}
+  {Taylor Dickson~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter information
-\makelettertitle
+\makelettertitle%
 
 %-------------------------------------------------------------------------------
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am writing to apply for the position of Senior Software Engineer with CyberCoders. With over 7 years of experience in Python development, Linux, Docker, physical and cloud infrastructure Azure, and networking protocols, I am well-equipped to contribute to your team's efforts in building enterprise-grade applications for network performance monitoring.
+I am writing to apply for the position of Supervisor Application Services with the City of Richmond Hill (Posting Id: 2913). With over seven years of progressive experience in IT leadership, systems analysis, and application development, I am eager to contribute my expertise to leading your Application Services team.
 
-Throughout my career, I have demonstrated a strong ability to design and develop solutions using open-source technologies including Python, targeting a variety of environments, either virtualized with Docker, in the Cloud on Azure, or on linux systems. I have a solid understanding of networking protocols with my time as a system administrator. With my collaborative mindset and effective communication skills, I am confident in my ability to work alongside Product Management and cross-functional teams to drive success.
+My experience as a Data Engineer/Team Lead at the Ontario Public Service has prepared me well for this role. In that position, I successfully:
+\begin{itemize}
+  \item Led a team of 5 technical specialists through complex data infrastructure modernization, providing direction, feedback, and professional development opportunities.
+  \item Collaborated closely with stakeholders to define clear requirements and develop strategies aligned with business objectives.
+  \item Managed multiple concurrent development projects and application support functions using open source frameworks in Python, SQL, Flask, and Vue.js.
+  \item Established data quality standards and testing procedures to ensure solution reliability and business acceptance.
+\end{itemize}
+In my current role at the Attorney General's office, I've further strengthened my technical expertise by implementing modern tools like DBT for data transformation and modeling, designing dimensional data warehouses, and optimizing ETL processes—all while working in a high-security environment with sensitive data.
 
-I am excited about the opportunity to join CyberCoders and contribute to its growth and my own. With my technical expertise, dedication to excellence, and passion for solving complex problems, I am confident that I can make a significant impact as a Senior Software Engineer. Thank you for considering my application.
+I bring to this position:
+\begin{itemize}
+  \item Strong leadership skills with experience in recruiting, mentoring, and developing technical staff
+  \item Expertise in multiple programming languages including Python, JavaScript, and various frameworks
+  \item Experience managing I.T. relationships and integrations
+  \item A collaborative approach to working with cross-functional teams and stakeholders
+  \item Excellent problem-solving abilities with a focus on developing innovative and effective business solutions
+\end{itemize}
+
+
+The opportunity to lead software implementation and development at the City of Richmond Hill is exciting. I am particularily interested in the oppertunity to deliver high quality software solutions while leveraging my background in open source software development, and infrasture management.
+
+I am excited about the opportunity to work with the city and contribute to its growth and my own. With my technical expertise, dedication to excellence, and passion for solving complex problems, I am confident that I can make a significant impact as the Supervisor of Application Services.
+
+I welcome the opportunity to discuss how my background aligns with your needs. Thank you for considering my application.
 \end{cvletter}
 
 
 %-------------------------------------------------------------------------------
 % Print the signature and enclosures with above letter information
-\makeletterclosing
+\makeletterclosing%
 
 \end{document}
