--- a/cv/experience-data-engineer.tex
+++ b/cv/experience-data-engineer.tex
@@ -24,12 +24,28 @@
 %       \item Successfully managing client relationships through various remote communication platforms.
 %     \end{cvitems}
 %   }
-
-\cventry
-  {Data Engineer/Team Lead}
-  {Ontario Public Service - Treasury Board Secretariat}
+\cventry%
+  {Data Engineer}
+  {Ontario Public Service --- Attorney General}
   {Toronto, Canada}
-  {2019 - Present}
+  {2024 --- Present}
+  {
+    \begin{cvitems}
+      \item Working in a high security environment with sensitive data
+      \item Implemented Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources.
+      \item Implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities.
+      \item Collaborated  cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes.
+      \item Conducted performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption.
+      \item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions.
+      \item Created and maintained project gantt charts and timelines, ordering tasks and deliverables to ensure meeting production timelines.
+    \end{cvitems}
+  }
+
+\cventry%
+  {Data Engineer/Team Lead}
+  {Ontario Public Service --- Treasury Board Secretariat}
+  {Toronto, Canada}
+  {2019 --- 2024}
   {
     \begin{cvitems}
       \item Led the division's data overhaul project, modernizing and enhancing digital data infrastructure. Utilized Python and Pandas for local data processing, uploading data from Excel inputs to an Azure cloud database using SQLAlchemy, and building robust data models to support advanced analytics.
@@ -39,17 +55,17 @@
       \item Supervised the hiring, onboarding, and mentorship of co-op students and new staff, assigned tasks, managed pull requests, git repositories, and branches, fostering a collaborative and productive team environment.
       \item Conducted regular team meetings, acted as a manager, and provided leadership in project planning and execution, ensuring alignment with organizational goals.
       \item Coordinated with cross-functional teams to design robust software architectures, define technical requirements, and ensure seamless integration of data engineering solutions across various platforms.
-      \item Conducted regular code reviews, provided technical guidance on data modeling, data integration, and pipeline optimization, promoting high-quality and maintainable code.
+      \item Conducted regular code reviews, provided technical guidance on data modelling, data integration, and pipeline optimization, promoting high-quality and maintainable code.
       \item Developed internal data cleaning and transformation tools using RESTful API design with Flask/Django/Node, and Vue.js, connected to an Azure database, enhancing data quality and consistency.
       \item Tackled significant challenges in name entity recognition using Levenshtein distances and the NLTK library in Python, improving data accuracy and processing efficiency.
     \end{cvitems}
   }
 
-\cventry
+\cventry%
   {Workforce Analyst}
-  {Ontario Public Service - Ministry of Government \& Consumer Services}
+  {Ontario Public Service --- Ministry of Government \& Consumer Services}
   {Toronto, Canada}
-  {2017 - 2019}
+  {2017 --- 2019}
   {
     \begin{cvitems}
       \item Utilized SQL, MS Access, Excel, VBA, and Python for data management, reporting, visualization, and process automation, supporting business operations with timely and accurate data insights.
@@ -60,11 +76,11 @@
     \end{cvitems}
   }
 
-\cventry
+\cventry%
   {Linux System Administrator}
   {Soho VFX}
   {Toronto, Canada}
-  {2016 - 2017}
+  {2016 --- 2017}
   {
     \begin{cvitems}
       \item Upgraded the render farm by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times for large-scale visual effects projects.
