--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -1,33 +1,20 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
 \cvsection{Skills}
 
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
 \begin{cvskills}
-%---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Javascript, Vue, SASS, HTML, CSS} % Skills
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Python, Django, Flask, Go Lang, Node, Express, REST API} % Skills
-%---------------------------------------------------------
-  \cvskill
-    {DevOps} % Category
-    {Docker, Docker-Compose, Shell Scripting (BASH), Networking (HTTP, TCP/IP, DNS), Mac and Linux Administration} % Skills
-%---------------------------------------------------------
-%  \cvskill
-%    {Programming} % Category
-%    {Python, Node} % Skills
-%---------------------------------------------------------
-  \cvskill
-    {Soft} % Category
-    {Communication, Team Management, Project Management, Software and Data Architecture, Writing} % Skills
-
-%---------------------------------------------------------
+  \cvskill%
+    {Front-end}
+    {Javascript, Vue, SASS, HTML, CSS}
+  \cvskill%
+    {Back-end}
+    {Python, Django, Flask, Go Lang, Node, Express, REST API}
+  \cvskill%
+    {DevOps}
+    {Docker, Docker-Compose, Shell Scripting (BASH), Networking (HTTP, TCP/IP, DNS), Mac and Linux Administration}
+  \cvskill%
+    {Data}
+    {Python, Data Build Tool (DBT), Azure Data Factory, Databricks}
+  \cvskill%
+    {Soft}
+    {Communication, Team Management, Project Management, Software and Data Architecture, Writing}
 \end{cvskills}
