--- a/Taylor Dickson Resume - Management.tex
+++ b/Taylor Dickson Resume - Management.tex
@@ -21,10 +21,10 @@
 \documentclass[11pt, letterpaper]{awesome-cv}
 
 % Define the version here
-\newcommand{\oversion}{data-engineer} % Change to "data-engineer", "dev-ops", "full-stack"
+\newcommand{\oversion}{software-manager} % Change to "data-engineer", "dev-ops", "full-stack"
 
 % Configure page margins with geometry
-\geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.6cm, footskip=.5cm}
+\geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.7cm, footskip=.5cm}
 
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
@@ -56,6 +56,9 @@
 % \photo{./examples/profile.png}
 \name{Taylor}{Dickson}
 
+\ifdefstring{\oversion}{software-manager}{%
+  \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
+}{%
 \ifdefstring{\oversion}{data-engineer}{%
   \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
 }{%
@@ -67,11 +70,11 @@
 }{%
 %Default
 	\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}%
-}}}
+}}}}
 
 \address{Toronto, Canada}
 
-\mobile{1-647-518-2894}
+\mobile{1--647--518--2894}
 \email{mail@twdickson.com}
 %\dateofbirth{January 1st, 1970}
 \homepage{twdickson.com}
@@ -99,7 +102,6 @@
 % Print the header with above personal information
 % Give optional argument to change alignment(C: center, L: left, R: right)
 \makecvheader%
-
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
 %\makecvfooter
@@ -107,41 +109,36 @@
 %  {Taylor Dickson~~~·~~~Resume}
 % {\thepage}
 
-
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
-%-------------------------------------------------------------------------------
-\ifdefstring{\oversion}{data-engineer}{%
-	\input{cv/summary.tex}
-	\input{cv/skills.tex}
-	\input{cv/experience-data-engineer.tex}
-%	 \input{cv/education.tex}
+%-------------------------------------------------------------------------------{%
+\ifdefstring{\oversion}{software-manager}{%
+  \input{cv/software-manager-summary.tex}
+  \input{cv/software-manager-skills.tex}
+  \input{cv/software-manager-experience.tex}
 }{%
-\ifdefstring{\oversion}{dev-ops}{%
-	\input{cv/summary.tex}
-	\input{cv/skills.tex}
-	\input{cv/experience-dev-ops.tex}}{%
-\ifdefstring{\oversion}{full-stack}{%
-	\input{cv/summary.tex}
-	\input{cv/skills.tex}
-	\input{cv/experience-full-stack.tex}
-% 	\input{cv/education.tex}
-}{%
-% Default
-	\input{cv/summary.tex}
-	\input{cv/skills.tex}
-	\input{cv/experience.tex}
-}}}
-%
-
-% \input{cv/extracurricular.tex}
-% \input{cv/honors.tex}
-% \input{cv/certificates.tex}
-% \input{cv/presentation.tex}
-% \input{cv/writing.tex}
-% \input{cv/committees.tex}
-
-
-%-------------------------------------------------------------------------------
+  \ifdefstring{\oversion}{data-engineer}{%
+    \input{cv/summary.tex}
+    \input{cv/skills.tex}
+    \input{cv/experience-data-engineer.tex}
+  }{%
+    \ifdefstring{\oversion}{dev-ops}{%
+      \input{cv/summary.tex}
+      \input{cv/skills.tex}
+      \input{cv/experience-dev-ops.tex}
+    }{%
+      \ifdefstring{\oversion}{full-stack}{%
+        \input{cv/summary.tex}
+        \input{cv/skills.tex}
+        \input{cv/experience-full-stack.tex}
+      }{%
+        % Default
+        \input{cv/summary.tex}
+        \input{cv/skills.tex}
+        \input{cv/experience.tex}
+      }
+    }
+  }
+}
 \end{document}
