refactor: :truck: Setup Naming Convention of Resume Parts

--- a/cv/data-engineer-experience.tex
+++ b/cv/data-engineer-experience.tex
@@ -24,22 +24,23 @@
 %       \item Successfully managing client relationships through various remote communication platforms.
 %     \end{cvitems}
 %   }
+
 \cventry%
-  {Data Engineer}
-  {Ontario Public Service --- Attorney General}
-  {Toronto, Canada}
-  {2024 --- Present}
-  {
-    \begin{cvitems}
-      \item Working in a high security environment with sensitive data
-      \item Implemented Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources.
-      \item Implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities.
-      \item Collaborated  cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes.
-      \item Conducted performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption.
-      \item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions.
-      \item Created and maintained project gantt charts and timelines, ordering tasks and deliverables to ensure meeting production timelines.
-    \end{cvitems}
-  }
+ {Data Engineer}
+ {Ontario Public Service --- Attorney General}
+ {Toronto, Canada}
+ {2024 --- Present}
+ {
+  \begin{cvitems}
+  \item Working in a high security environment with sensitive data, ensuring compliance with data protection standards
+  \item Led the implementation of Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources
+  \item Designed and implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities
+  \item Collaborated with cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes
+  \item Managed performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption
+  \item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions
+  \item Created and maintained project gantt charts and timelines, coordinating tasks and deliverables to ensure meeting production deadlines
+  \end{cvitems}
+ }
 
 \cventry%
   {Data Engineer/Team Lead}
